fonts renewed and keyboard accessability added

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                     </li>
                 </ul>
             </nav>
-            <address class="header__phone animate__animated"><a class="header__phone-link" href="tel:+7(925)452-02-65" aria-label="телефон">+7 (925) 452-02-65</a></address>
-            <button class="button header__button button_transparent">
+            <address class="header__phone animate__animated"><a class="header__phone-link" href="tel:+79254520265" aria-label="телефон">+7 (925) 452-02-65</a></address>
+            <button class="button header__button button_transparent" aria-label="заказ обратного звонка">
                 <img class="header__button_img  animate__animated" src="img/call-request.png" alt="заказать звонок">
                 <span class="header__button_text">Заказать звонок</span>  
             </button>
@@ -282,7 +282,7 @@
             </div>
             <div class="footer__center">
                 <address>
-                    <a class="phone footer__phone" href="tel:+7(925)452-02-65" aria-label="телефон">
+                    <a class="phone footer__phone" href="tel:+79254520265" aria-label="телефон">
                         <i class="fas fa-phone-alt icon-fonts"></i>
                         <span class="phone__numbers">+7 (925) 452-02-65</span>
                     </a>
@@ -312,6 +312,7 @@
     <script src="js/jquery.inputmask.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/wow.min.js"></script>
+    <script src="js/inert.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
